--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         uses: astral-sh/setup-uv@v4
 
       - name: Setup Python
-        run: uv python install 3.10
+        run: uv python install 3.14
 
       - name: Sync deps
         run: uv sync --extra dev
@@ -40,7 +40,7 @@ jobs:
         uses: astral-sh/setup-uv@v4
 
       - name: Setup Python
-        run: uv python install 3.10
+        run: uv python install 3.14
 
       - name: Sync deps
         run: uv sync --extra dev
@@ -54,7 +54,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.14"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -69,4 +69,4 @@ jobs:
         run: uv sync --extra dev --python ${{ matrix.python-version }}
 
       - name: Pytest + coverage
-        run: uv run --python ${{ matrix.python-version }} pytest tests -v --cov=rdc --cov-report=term-missing --cov-fail-under=80
+        run: uv run --python ${{ matrix.python-version }} pytest tests/unit -v --cov=rdc --cov-report=term-missing --cov-fail-under=80
