--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         uses: astral-sh/setup-uv@v4
 
       - name: Setup Python
-        run: uv python install 3.14
+        run: uv python install 3.12
 
       - name: Sync deps
         run: uv sync --extra dev
@@ -40,7 +40,7 @@ jobs:
         uses: astral-sh/setup-uv@v4
 
       - name: Setup Python
-        run: uv python install 3.14
+        run: uv python install 3.12
 
       - name: Sync deps
         run: uv sync --extra dev
@@ -54,7 +54,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.14"]
+        python-version: ["3.10", "3.12", "3.14"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -70,3 +70,44 @@ jobs:
 
       - name: Pytest + coverage
         run: uv run --python ${{ matrix.python-version }} pytest tests/unit -v --cov=rdc --cov-report=term-missing --cov-fail-under=80
+
+  build-and-verify:
+    name: Build & verify (py${{ matrix.python-version }})
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10", "3.12", "3.14"]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v4
+
+      - name: Setup Python
+        run: uv python install ${{ matrix.python-version }}
+
+      - name: Build
+        run: uv build --python ${{ matrix.python-version }}
+
+      - name: Twine check
+        run: uvx twine check dist/*
+
+      - name: Check wheel contents
+        run: uvx check-wheel-contents dist/*.whl
+
+      - name: Create clean test venv
+        run: uv venv /tmp/test-env --python ${{ matrix.python-version }}
+
+      - name: Install wheel in clean venv
+        run: uv pip install dist/*.whl --python /tmp/test-env/bin/python
+
+      - name: Smoke test version
+        run: /tmp/test-env/bin/rdc --version
+
+      - name: Smoke test help
+        run: /tmp/test-env/bin/rdc --help
+
+      - name: Smoke test import
+        run: /tmp/test-env/bin/python -c "from rdc.cli import main"
