feat(aur): add PKGBUILD for rdc-cli-git with renderdoc Python module
Add aur/PKGBUILD that builds renderdoc pyrenderdoc from source (no Qt/GL)
and installs rdc-cli with shell completions. Also add MIT LICENSE file
and license field to pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 description = "Unix-friendly CLI for RenderDoc captures"
 readme = "README.md"
 requires-python = ">=3.10"
+license = {text = "MIT"}
 authors = [{name = "Jim"}]
 dependencies = [
   "click>=8.1",
