chore: bump version to 0.2.0 and archive phase 2.5 openspecs
Bump version in pyproject.toml and __init__.py for Phase 2 release.
Archive all Phase 2.5 openspecs to changes/archive/.

--- a/pixi.toml
+++ b/pixi.toml
@@ -8,10 +8,11 @@ python = "3.14.*"
 uv = ">=0.5"
 
 [tasks]
-sync = "uv sync --extra dev"
+sync = "uv sync --extra dev && git config core.hooksPath .githooks"
 lint = "uv run ruff check src tests && uv run ruff format --check src tests"
 typecheck = "uv run mypy src"
 test = "uv run pytest tests/unit -v --cov=rdc --cov-report=term-missing --cov-fail-under=80"
 test-gpu = "uv run pytest tests -v -m gpu --no-header"
 test-all = "uv run pytest tests -v --cov=rdc --cov-report=term-missing"
 check = "pixi run lint && pixi run typecheck && pixi run test"
+verify = "bash scripts/verify-package.sh"
