--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "rdc-cli"
-version = "0.1.0"
+version = "0.2.0"
 description = "Unix-friendly CLI for RenderDoc captures"
 readme = "README.md"
 requires-python = ">=3.10"
-license = {text = "MIT"}
+license = "MIT"
 authors = [{name = "Jim"}]
 dependencies = [
   "click>=8.1",
