--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,21 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "rdc-cli"
 version = "0.2.0"
-description = "Unix-friendly CLI for RenderDoc captures"
+description = "Unix-friendly CLI for RenderDoc .rdc captures"
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
 authors = [{name = "Jim"}]
+classifiers = [
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
+  "Environment :: Console",
+  "Topic :: Multimedia :: Graphics",
+]
 dependencies = [
   "click>=8.1",
 ]
