fix(aur): disable LTO and pin renderdoc to v1.41
Arch's makepkg.conf injects -flto=auto which breaks SWIG-generated
Python bindings in renderdoc, causing segfault on module load.
Strip LTO flags before cmake. Pin renderdoc to stable v1.41 tag
(git HEAD v1.43-dev also segfaults independently).

--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -31,7 +31,7 @@ provides=('rdc-cli')
 conflicts=('rdc-cli')
 source=(
   "git+https://github.com/BANANASJIM/rdc-cli.git"
-  "git+https://github.com/baldurk/renderdoc.git"
+  "git+https://github.com/baldurk/renderdoc.git#tag=v1.41"
   "renderdoc-swig::https://github.com/baldurk/swig/archive/renderdoc-modified-7.zip"
 )
 sha256sums=('SKIP'
@@ -46,6 +46,11 @@ pkgver() {
 
 build() {
   # Build renderdoc Python module (pyrenderdoc only, no Qt UI)
+  # Disable LTO — breaks SWIG-generated Python bindings
+  export CFLAGS="${CFLAGS//-flto=auto/}"
+  export CXXFLAGS="${CXXFLAGS//-flto=auto/}"
+  export LDFLAGS="${LDFLAGS//-flto=auto/}"
+
   cd renderdoc
   cmake -B build -G Ninja \
     -DCMAKE_BUILD_TYPE=Release \
