feat(test): add e2e test script for full rdc workflow validation
Adds `pixi run e2e` that installs dev version system-wide and tests
session lifecycle, queries, VFS, path completion, and shell scripts
against a real capture file (26 checks).

--- a/pixi.toml
+++ b/pixi.toml
@@ -16,3 +16,5 @@ test-gpu = "uv run pytest tests -v -m gpu --no-header"
 test-all = "uv run pytest tests -v --cov=rdc --cov-report=term-missing"
 check = "pixi run lint && pixi run typecheck && pixi run test"
 verify = "bash scripts/verify-package.sh"
+dev-install = "pip install --break-system-packages --quiet -e ."
+e2e = "pixi run dev-install && bash scripts/e2e-test.sh"
