feat(docs): add Astro documentation site with dark/light theme
- Landing page: hero with typed.js terminal, GSAP scroll animations,
  command grid, install blocks, feature cards
- Documentation: 5 pages (overview, install, usage, commands, VFS)
  with sidebar navigation and mobile support
- Dark/light mode toggle with CSS custom properties, persisted in
  localStorage. Terminal blocks stay dark in both modes.
- CI: GitHub Actions workflow builds, validates (206 tests), and
  deploys to GitHub Pages on push to master
- Responsive: mobile hamburger menu, mobile sidebar toggle
- Design: JetBrains Mono throughout, soft blue-gray light theme,
  glass-card hover effects, section glow dividers
- Includes VHS tape files, gen-docs.py script, validation test suite

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ dist/
 CLAUDE.md
 tests/fixtures/vulkan_samples
 .local/
+
+# Docs site
+docs/node_modules/
+docs/dist/
+docs/.astro/
+docs/public/demos/*.gif
+docs/public/demos/*.webm
