--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,12 @@ classifiers = [
 ]
 dependencies = [
   "click>=8.1",
+  "Pillow>=10.0",
+  "numpy>=1.24",
 ]
 
 [project.optional-dependencies]
 rich = ["rich>=13.0"]
-imaging = ["Pillow>=10.0"]
-diff = ["Pillow>=10.0", "numpy>=1.24"]
 dev = [
   "pytest>=8.0",
   "pytest-cov>=5.0",
