fix(build): add PYTHONPATH to pixi activation for worktree isolation
Editable install .pth files can resolve to the main repo src/ instead
of a worktree's own src/, causing tests to run against stale code.
Setting PYTHONPATH=src in pixi activation.env ensures the local src/
always takes priority in Python's import resolution.

--- a/pixi.toml
+++ b/pixi.toml
@@ -9,6 +9,7 @@ uv = ">=0.5"
 
 [activation.env]
 RENDERDOC_PYTHON_PATH = ".local/renderdoc"
+PYTHONPATH = "src"
 
 [tasks]
 sync = "uv sync --extra dev && git config core.hooksPath .githooks"
