fix(build): add PYTHONPATH and auto-link renderdoc for worktree isolation
1. Set PYTHONPATH=src in pixi activation.env so Python imports always
   resolve to the local src/ in worktrees, overriding stale .pth files.

2. Add scripts/ensure-renderdoc.sh called by sync task — auto-symlinks
   .local/renderdoc from the main worktree so pre-push e2e tests work
   without manual setup.

--- a/pixi.toml
+++ b/pixi.toml
@@ -12,7 +12,7 @@ RENDERDOC_PYTHON_PATH = ".local/renderdoc"
 PYTHONPATH = "src"
 
 [tasks]
-sync = "uv sync --extra dev && git config core.hooksPath .githooks"
+sync = "uv sync --extra dev && git config core.hooksPath .githooks && bash scripts/ensure-renderdoc.sh"
 setup-renderdoc = "bash scripts/setup-renderdoc.sh"
 lint = "uv run ruff check src tests && uv run ruff format --check src tests"
 typecheck = "uv run mypy src"
