ci(repo): pin action SHAs, add LICENSE, harden gitignore and CI pipeline
- SHA-pin all 17 GitHub Actions references in ci.yml and commitlint.yml
- Add MIT LICENSE file (Copyright 2024 BANANASJIM)
- Add .claude/, docs/, scripts/*.py to .gitignore
- Add Dependabot config for GitHub Actions and pip weekly updates
- Add pip-audit security job to CI pipeline
- Add concurrency groups with cancel-in-progress to both workflows
- Enable uv cache on all setup-uv steps
- Update README stats: 54 commands, 1609 tests, 95.29% coverage
- Add SECURITY.md and .github/CODEOWNERS

--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     branches: [master, main]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
   pull-requests: read
@@ -13,11 +17,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
 
       - name: Commitlint
-        uses: wagoid/commitlint-github-action@v6
+        uses: wagoid/commitlint-github-action@b948419dd99f3fd78a6548d48f94e3df7f6bf3ed # v6.2.1
         with:
           configFile: .commitlintrc.yml
