--- a/aur/stable/PKGBUILD
+++ b/aur/stable/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Jim <jim@example.com>
-pkgname=rdc-cli-git
-pkgver=0.1.0.r0.g0000000
+pkgname=rdc-cli
+pkgver=0.2.0
 pkgrel=1
 pkgdesc="Unix-friendly CLI for RenderDoc .rdc captures"
 arch=('x86_64')
@@ -29,25 +29,17 @@ optdepends=(
   'python-rich: colored output support'
 )
 provides=('rdc-cli')
-conflicts=('rdc-cli')
+conflicts=('rdc-cli-git')
 source=(
-  "git+https://github.com/BANANASJIM/rdc-cli.git"
+  "rdc-cli-${pkgver}.tar.gz::https://github.com/BANANASJIM/rdc-cli/archive/refs/tags/v${pkgver}.tar.gz"
   "git+https://github.com/baldurk/renderdoc.git#tag=v1.41"
   "renderdoc-swig::https://github.com/baldurk/swig/archive/renderdoc-modified-7.zip"
 )
-sha256sums=('SKIP'
+sha256sums=('PLACEHOLDER'
             'SKIP'
             '9d7e5013ada6c42ec95ab167a34db52c1cc8c09b89c8e9373631b1f10596c648')
 
-pkgver() {
-  cd rdc-cli
-  git describe --long --tags 2>/dev/null | sed 's/^v//;s/-/.r/;s/-/./' ||
-    printf "0.2.0.r%s.g%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
-}
-
 build() {
-  # Build renderdoc Python module (pyrenderdoc only, no Qt UI)
-  # Disable LTO — breaks SWIG-generated Python bindings
   export CFLAGS="${CFLAGS//-flto=auto/}"
   export CXXFLAGS="${CXXFLAGS//-flto=auto/}"
   export LDFLAGS="${LDFLAGS//-flto=auto/}"
@@ -64,12 +56,10 @@ build() {
     -DRENDERDOC_SWIG_PACKAGE="$srcdir/renderdoc-swig"
   cmake --build build
 
-  # Build rdc-cli wheel
-  cd "$srcdir/rdc-cli"
+  cd "$srcdir/rdc-cli-${pkgver}"
   python -m build --wheel --no-isolation
 
-  # Generate shell completion scripts
-  PYTHONPATH="$srcdir/rdc-cli/src" python -c "
+  PYTHONPATH="$srcdir/rdc-cli-${pkgver}/src" python -c "
 from rdc.commands.completion import _generate
 for shell, path in [('bash','$srcdir/rdc.bash'),('zsh','$srcdir/_rdc'),('fish','$srcdir/rdc.fish')]:
     with open(path, 'w') as f:
@@ -78,20 +68,16 @@ for shell, path in [('bash','$srcdir/rdc.bash'),('zsh','$srcdir/_rdc'),('fish','
 }
 
 package() {
-  # Install rdc-cli
-  cd rdc-cli
+  cd "rdc-cli-${pkgver}"
   python -m installer --destdir="$pkgdir" dist/*.whl
 
-  # Install renderdoc Python module
   local _site="$(python -c 'import sysconfig; print(sysconfig.get_path("purelib"))')"
   install -Dm755 "$srcdir/renderdoc/build/lib/renderdoc.so" "$pkgdir/$_site/renderdoc.so"
   install -Dm755 "$srcdir/renderdoc/build/lib/librenderdoc.so" "$pkgdir/$_site/librenderdoc.so"
 
-  # Install shell completions
   install -Dm644 "$srcdir/rdc.bash" "$pkgdir/usr/share/bash-completion/completions/rdc"
   install -Dm644 "$srcdir/_rdc" "$pkgdir/usr/share/zsh/site-functions/_rdc"
   install -Dm644 "$srcdir/rdc.fish" "$pkgdir/usr/share/fish/vendor_completions.d/rdc.fish"
 
-  # Install license
   install -Dm644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
