feat(skill): add Claude Code SKILL.md with auto-generated command reference
Add a Claude Code skill at .claude/skills/rdc-cli/ so AI agents can
discover and use rdc-cli commands for RenderDoc capture analysis.

- SKILL.md: hand-written workflow guide with trigger phrases, core
  workflow, output formats, common tasks, CI assertions, and shader
  edit-replay recipes
- scripts/gen-skill-ref.py: Click introspection script that auto-
  generates references/commands-quick-ref.md with per-command help
  text, argument tables, and option tables
- CI: add skill reference freshness check to lint job (uv run + diff)
- pixi: add gen-skill-ref and check-skill-ref tasks
- .gitignore: change .claude/ to .claude/* + !.claude/skills/ so the
  skill directory is tracked while CLAUDE.md stays ignored
- Tests: 13 new unit tests covering generator output, determinism,
  subgroup handling, Sentinel leak guard, and skill file structure

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,10 @@ jobs:
       - name: Ruff format check
         run: uv run ruff format --check src tests
 
+      - name: Verify skill reference is fresh
+        run: diff <(uv run python scripts/gen-skill-ref.py) .claude/skills/rdc-cli/references/commands-quick-ref.md
+        shell: bash
+
   security:
     name: Dependency audit
     runs-on: ubuntu-latest
