feat(skill): add install-skill command for distribution
Move skill files into src/rdc/_skills/ so they ship with the wheel.
Add `rdc install-skill` command that copies bundled skill files to
~/.claude/skills/rdc-cli/ for global Claude Code discovery. Supports
--check (verify installation) and --remove (uninstall) flags.

The .claude/skills/rdc-cli directory becomes a symlink to the package
location, preserving local dev discovery without file duplication.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: uv run ruff format --check src tests
 
       - name: Verify skill reference is fresh
-        run: diff <(uv run python scripts/gen-skill-ref.py) .claude/skills/rdc-cli/references/commands-quick-ref.md
+        run: diff <(uv run python scripts/gen-skill-ref.py) src/rdc/_skills/references/commands-quick-ref.md
         shell: bash
 
   security:
