--- a/pixi.toml
+++ b/pixi.toml
@@ -20,7 +20,7 @@ test = "uv run pytest tests/unit -v --cov=rdc --cov-report=term-missing --cov-fa
 test-gpu = "uv run pytest tests -v -m gpu --no-header"
 test-all = "uv run pytest tests -v --cov=rdc --cov-report=term-missing"
 check = "pixi run lint && pixi run typecheck && pixi run test"
-gen-skill-ref = "bash -c 'uv run python scripts/gen-skill-ref.py > .claude/skills/rdc-cli/references/commands-quick-ref.md'"
-check-skill-ref = "bash -c 'diff <(uv run python scripts/gen-skill-ref.py) .claude/skills/rdc-cli/references/commands-quick-ref.md'"
+gen-skill-ref = "bash -c 'uv run python scripts/gen-skill-ref.py > src/rdc/_skills/references/commands-quick-ref.md'"
+check-skill-ref = "bash -c 'diff <(uv run python scripts/gen-skill-ref.py) src/rdc/_skills/references/commands-quick-ref.md'"
 verify = "bash scripts/verify-package.sh"
 e2e = "bash scripts/e2e-test.sh"
