chore(release): bump version to 0.3.0 and update PKGBUILD maintainer
- Bump pyproject.toml version 0.2.0 → 0.3.0
- Update AUR PKGBUILD maintainer to bananasjim
- Update AUR stable PKGBUILD version to 0.3.0

--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Jim <jim@example.com>
+# Maintainer: bananasjim <bananasjim1@gmail.com>
 pkgname=rdc-cli-git
 pkgver=0.1.0.r0.g0000000
 pkgrel=1
