--- a/aur/stable/PKGBUILD
+++ b/aur/stable/PKGBUILD
@@ -1,6 +1,6 @@
-# Maintainer: Jim <jim@example.com>
+# Maintainer: bananasjim <bananasjim1@gmail.com>
 pkgname=rdc-cli
-pkgver=0.2.0
+pkgver=0.3.0
 pkgrel=1
 pkgdesc="Unix-friendly CLI for RenderDoc .rdc captures"
 arch=('x86_64')
