fix(ci): only merge mkdocs cli-reference into Astro output
The previous merge step copied all mkdocs output into the Astro dist,
causing mkdocs-generated pages (usage, vfs, index, etc.) to overwrite
the Astro versions. Now only copies cli-reference/ which is the sole
mkdocs-click auto-generated page.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -78,10 +78,10 @@ jobs:
           npm ci
           npm run build
 
-      - name: Merge mkdocs into Astro output
+      - name: Merge mkdocs CLI reference into Astro output
         run: |
-          mkdir -p docs-astro/dist/docs
-          cp -r _site/* docs-astro/dist/docs/
+          mkdir -p docs-astro/dist/docs/cli-reference
+          cp -r _site/cli-reference/* docs-astro/dist/docs/cli-reference/
 
       - name: Generate badge endpoint JSONs
         run: |
