fix(ci): install dev extras for docs badge stats computation
The docs workflow ran `uv sync` without `--extra dev`, so pytest
was not installed. The test count and coverage steps failed silently
(stderr redirected to /dev/null), producing tests=0 and coverage="".

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,7 +35,7 @@ jobs:
           enable-cache: true
 
       - name: Install Python dependencies
-        run: uv sync
+        run: uv sync --extra dev
 
       - name: Compute test stats
         id: test_stats
