feat(mock): add Phase 5B capture types and TargetControl mock
Add mock extensions for capture API testing:
- CaptureOptions (12 fields), ExecuteResult, TargetControlMessageType (11 enums)
- NewCaptureData, Thumbnail, GPUDevice, SectionProperties, SectionType, SectionFlags
- MockTargetControl class with message loop support
- Enhanced MockCaptureFile with GetThumbnail, GetAvailableGPUs, sections, embed deps
- Module-level ExecuteAndInject, CreateTargetControl, GetDefaultCaptureOptions
- 33 smoke tests in test_mock_capture_types.py

--- a/ruff.toml
+++ b/ruff.toml
@@ -6,4 +6,4 @@ select = ["E", "W", "F", "I", "N", "UP", "B"]
 
 [lint.per-file-ignores]
 # Mock renderdoc module mirrors RenderDoc's CamelCase API names
-"tests/mocks/mock_renderdoc.py" = ["N802", "N815"]
+"tests/mocks/mock_renderdoc.py" = ["N802", "N803", "N815"]
