--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=68", "wheel"]
+requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "rdc-cli"
-version = "0.3.1"
+dynamic = ["version"]
 description = "Unix-friendly CLI for RenderDoc .rdc captures"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -51,6 +51,10 @@ where = ["src"]
 addopts = "-q"
 testpaths = ["tests"]
 markers = ["gpu: requires real renderdoc module and GPU"]
+
+[tool.setuptools_scm]
+version_scheme = "guess-next-dev"
+local_scheme = "no-local-version"
 
 [tool.mypy]
 python_version = "3.10"
