fix(aur): add missing setuptools-scm makedep and CI validation
Add python-setuptools-scm to makedepends in both PKGBUILD variants —
fixes `yay -S rdc-cli-git` build failure. Add validate-aur CI job that
parses makedepends from PKGBUILD and runs the same no-isolation wheel
build, catching any future dependency drift automatically.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,27 @@ jobs:
       - run: uv sync --extra dev
       - run: uv run --with pip-audit pip-audit
 
+  validate-aur:
+    name: Validate AUR PKGBUILD
+    runs-on: ubuntu-latest
+    container: archlinux:latest
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0  # setuptools-scm needs git history
+
+      - name: Install makedepends from PKGBUILD
+        run: |
+          deps=$(sed -n '/^makedepends=(/,/)/p' aur/PKGBUILD \
+                 | grep -oP "'[^']+'" | tr -d "'" | tr '\n' ' ')
+          pacman -Syu --noconfirm base-devel $deps
+
+      - name: Mark repo safe for setuptools-scm
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
+      - name: Build wheel (no-isolation, same as PKGBUILD)
+        run: python -m build --wheel --no-isolation
+
   typecheck:
     name: Type check (mypy)
     runs-on: ubuntu-latest
