--- a/aur/stable/PKGBUILD
+++ b/aur/stable/PKGBUILD
@@ -20,6 +20,7 @@ makedepends=(
   'python-build'
   'python-installer'
   'python-setuptools'
+  'python-setuptools-scm'
   'python-wheel'
   'cmake'
   'ninja'
