fix(ci): use pretend version for AUR validation job
setuptools-scm cannot resolve git tags in the container checkout.
Use SETUPTOOLS_SCM_PRETEND_VERSION since the goal is validating
makedepends completeness, not version inference.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,8 +61,6 @@ jobs:
     container: archlinux:latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          fetch-depth: 0  # setuptools-scm needs git history
 
       - name: Install makedepends from PKGBUILD
         run: |
@@ -70,11 +68,10 @@ jobs:
                  | grep -oP "'[^']+'" | tr -d "'" | tr '\n' ' ')
           pacman -Syu --noconfirm base-devel $deps
 
-      - name: Mark repo safe for setuptools-scm
-        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
-
       - name: Build wheel (no-isolation, same as PKGBUILD)
         run: python -m build --wheel --no-isolation
+        env:
+          SETUPTOOLS_SCM_PRETEND_VERSION: "0.0.0"
 
   typecheck:
     name: Type check (mypy)
