fix(aur): add missing setuptools-scm makedep and CI validation (#115)
* fix(aur): add missing setuptools-scm makedep and CI validation

Add python-setuptools-scm to makedepends in both PKGBUILD variants —
fixes `yay -S rdc-cli-git` build failure. Add validate-aur CI job that
parses makedepends from PKGBUILD and runs the same no-isolation wheel
build, catching any future dependency drift automatically.

* fix(ci): use pretend version for AUR validation job

setuptools-scm cannot resolve git tags in the container checkout.
Use SETUPTOOLS_SCM_PRETEND_VERSION since the goal is validating
makedepends completeness, not version inference.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,24 @@ jobs:
       - run: uv sync --extra dev
       - run: uv run --with pip-audit pip-audit
 
+  validate-aur:
+    name: Validate AUR PKGBUILD
+    runs-on: ubuntu-latest
+    container: archlinux:latest
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Install makedepends from PKGBUILD
+        run: |
+          deps=$(sed -n '/^makedepends=(/,/)/p' aur/PKGBUILD \
+                 | grep -oP "'[^']+'" | tr -d "'" | tr '\n' ' ')
+          pacman -Syu --noconfirm base-devel $deps
+
+      - name: Build wheel (no-isolation, same as PKGBUILD)
+        run: python -m build --wheel --no-isolation
+        env:
+          SETUPTOOLS_SCM_PRETEND_VERSION: "0.0.0"
+
   typecheck:
     name: Type check (mypy)
     runs-on: ubuntu-latest
