docs: auto-generate command reference and add terminal replay animation
- Add gen-commands.py: Click introspection generates commands.json with
  all 62 commands, signatures, and help text grouped by category
- Rewrite commands.astro from 313 lines of hand-maintained HTML to a
  20-line data-driven Astro template that imports commands.json
- Add gen-replay.py: runs real rdc commands against fixture captures to
  produce replay.json for the landing page terminal animation
- Replace typed.js with custom terminal replay that cycles through 5
  themed playlists (quickstart, VFS+pipes, debug, CI, diff)
- Fix inaccurate search flags in usage.astro (--scope → --stage, -C)
- Add gen-commands/check-commands and gen-replay/check-replay pixi tasks
- Update command count 61 → 62 in stats.json

--- a/pixi.toml
+++ b/pixi.toml
@@ -22,5 +22,9 @@ test-all = "uv run pytest tests -v --cov=rdc --cov-report=term-missing"
 check = "pixi run lint && pixi run typecheck && pixi run test"
 gen-skill-ref = "bash -c 'uv run python scripts/gen-skill-ref.py > src/rdc/_skills/references/commands-quick-ref.md'"
 check-skill-ref = "bash -c 'diff <(uv run python scripts/gen-skill-ref.py) src/rdc/_skills/references/commands-quick-ref.md'"
+gen-replay = "bash -c 'uv run python scripts/gen-replay.py > docs-astro/src/data/replay.json'"
+check-replay = "bash -c 'diff <(uv run python scripts/gen-replay.py) docs-astro/src/data/replay.json'"
+gen-commands = "bash -c 'uv run python scripts/gen-commands.py > docs-astro/src/data/commands.json'"
+check-commands = "bash -c 'diff <(uv run python scripts/gen-commands.py) docs-astro/src/data/commands.json'"
 verify = "bash scripts/verify-package.sh"
 e2e = "bash scripts/e2e-test.sh"
