--- a/docs-astro/package.json
+++ b/docs-astro/package.json
@@ -14,8 +14,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.7.10",
     "gsap": "^3.12.7",
-    "tailwindcss": "^3.4.17",
-    "typed.js": "^2.1.0"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
