--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "rdc-cli"
 dynamic = ["version"]
-description = "Unix-friendly CLI for RenderDoc .rdc captures"
+description = "CLI for RenderDoc .rdc captures"
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
