feat(build): add cross-platform build_renderdoc.py (W2)
Replace platform-specific bash build scripts with a single Python
script that works on Linux, macOS, and Windows. The script is
standalone (stdlib only, Python 3.10+) and handles:
- Platform-aware prerequisite checking
- Idempotent git clone + SWIG download with SHA256 verification
- LTO flag stripping on all Linux (not just Arch)
- CMake generator selection per platform (Ninja / VS 2022)
- Artifact copy with macOS .dylib fallback

Also: deprecation notices on bash scripts, pixi.toml task update,
38 unit tests, integration test scaffold, and OpenSpec docs.

--- a/pixi.toml
+++ b/pixi.toml
@@ -13,7 +13,7 @@ PYTHONPATH = "src"
 
 [tasks]
 sync = "uv sync --extra dev && git config core.hooksPath .githooks && bash scripts/ensure-renderdoc.sh"
-setup-renderdoc = "bash scripts/setup-renderdoc.sh"
+setup-renderdoc = "python scripts/build_renderdoc.py .local/renderdoc --build-dir .local/renderdoc-build"
 lint = "uv run ruff check src tests && uv run ruff format --check src tests"
 typecheck = "uv run mypy src"
 test = "uv run pytest tests/unit -v --cov=rdc --cov-report=term-missing --cov-fail-under=80"
