refactor(tests): deduplicate helpers and remove sys.path hacks (Phase R1)
- Move _require_renderdoc() to commands/_helpers.py, replace 2 duplicates
- Add pythonpath to pyproject.toml, remove sys.path.insert from 42 test files
- Create shared rpc_request() in tests/unit/conftest.py, replace 26 local _req()
- Net -499 lines of mechanical duplication

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ where = ["src"]
 [tool.pytest.ini_options]
 addopts = "-q"
 testpaths = ["tests"]
+pythonpath = ["src", "tests/mocks", "scripts"]
 markers = ["gpu: requires real renderdoc module and GPU"]
 
 [tool.setuptools_scm]
