--- a/pixi.toml
+++ b/pixi.toml
@@ -8,22 +8,22 @@ python = "3.14.*"
 uv = ">=0.5"
 
 [target.osx-64.dependencies]
-cmake = "*"
-ninja = "*"
-autoconf = "*"
-automake = "*"
-libtool = "*"
-pkg-config = "*"
-m4 = "*"
+cmake = ">=3.26,<4"
+ninja = ">=1.11,<2"
+autoconf = ">=2.71,<3"
+automake = ">=1.16,<2"
+libtool = ">=2.4,<3"
+pkg-config = ">=0.29,<1"
+m4 = ">=1.4,<2"
 
 [target.osx-arm64.dependencies]
-cmake = "*"
-ninja = "*"
-autoconf = "*"
-automake = "*"
-libtool = "*"
-pkg-config = "*"
-m4 = "*"
+cmake = ">=3.26,<4"
+ninja = ">=1.11,<2"
+autoconf = ">=2.71,<3"
+automake = ">=1.16,<2"
+libtool = ">=2.4,<3"
+pkg-config = ">=0.29,<1"
+m4 = ">=1.4,<2"
 
 [activation.env]
 RENDERDOC_PYTHON_PATH = ".local/renderdoc"
