feat(split): support split capture RPC and mac setup (#139)
* feat(split): support split capture rpc and mac setup

* fix(split): handle split capture download errors

* fix(split): address review feedback

* fix(build): handle swig archives without custom tree

* chore(split): clarify capture download docstring

* docs(split): update readme and archive spec

* test(e2e): capture fresh frame before replay checks

* docs(readme): simplify support matrix and aur install

* docs(astro): update install and add remote page

* fix(split): return rpc error on remote capture exceptions

--- a/pixi.toml
+++ b/pixi.toml
@@ -7,6 +7,24 @@ platforms = ["linux-64", "osx-arm64", "osx-64"]
 python = "3.14.*"
 uv = ">=0.5"
 
+[target.osx-64.dependencies]
+cmake = ">=3.26,<4"
+ninja = ">=1.11,<2"
+autoconf = ">=2.71,<3"
+automake = ">=1.16,<2"
+libtool = ">=2.4,<3"
+pkg-config = ">=0.29,<1"
+m4 = ">=1.4,<2"
+
+[target.osx-arm64.dependencies]
+cmake = ">=3.26,<4"
+ninja = ">=1.11,<2"
+autoconf = ">=2.71,<3"
+automake = ">=1.16,<2"
+libtool = ">=2.4,<3"
+pkg-config = ">=0.29,<1"
+m4 = ">=1.4,<2"
+
 [activation.env]
 RENDERDOC_PYTHON_PATH = ".local/renderdoc"
 PYTHONPATH = "src"
