test(e2e): add regression test suite for 60/66 CLI commands
Track 149 existing e2e tests across 11 files covering session, query,
VFS, export, debug, diff, assert, formats, and advanced commands.

Add new tests:
- test_shader_edit.py: shader-build, shader-replace, shader-restore,
  shader-restore-all (6 tests, GLSL compile + replace/restore workflow)
- test_capture.py: capture, capture --trigger, full inject workflow
  (4 tests, vulkan_samples marker for live capture testing)
- test_debug.py: pick-pixel text + JSON output (2 tests)

Infrastructure:
- conftest.py: skip guards for missing large fixtures, vulkan_samples_bin
  fixture, timeout parameter on rdc_ok/rdc_fail/rdc_json helpers
- pyproject.toml: register vulkan_samples pytest marker
- pixi.toml: test-e2e, test-e2e-full, setup-vulkan-samples tasks
- scripts/setup-vulkan-samples.sh: clone + build Vulkan-Samples

--- a/pixi.toml
+++ b/pixi.toml
@@ -47,6 +47,9 @@ gen-commands = "bash -c 'uv run python scripts/gen-commands.py > docs-astro/src/
 check-commands = "bash -c 'diff <(uv run python scripts/gen-commands.py) docs-astro/src/data/commands.json'"
 verify = "bash scripts/verify-package.sh"
 e2e = "bash scripts/e2e-test.sh"
+test-e2e = "uv run pytest tests/e2e -v -m gpu --no-header"
+test-e2e-full = "uv run pytest tests/e2e -v -m 'gpu or vulkan_samples' --no-header"
+setup-vulkan-samples = "bash scripts/setup-vulkan-samples.sh"
 docs-install = "npm --prefix docs-astro ci"
 docs-build = "npm --prefix docs-astro run build"
 docs-test = "npm --prefix docs-astro test"
